--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "dev": "webpack serve --open --watch",
+    "dev": "webpack serve --open",
     "watch": "webpack --watch"
   },
   "author": "",
