--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "cSpell.ignoreWords": [
+        "Ohta",
+        "Sumomo",
         "googlemaps",
-        "neko"
+        "neko",
+        "yodo"
     ]
 }
